Fix stretched image on radio show

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -155,6 +155,7 @@ article.radio-show {
     > img {
       width: 100%;
       height: 100%;
+      object-fit: contain;
     }
   }
   > div {
